--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
         "checkJs": true,
         "importHelpers": true
     },
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist", "download.js"]
 }
